Initial front-end layout for web-mark form

--- a/app/views/user_dashboard/index.html.erb
+++ b/app/views/user_dashboard/index.html.erb
@@ -1,7 +1,5 @@
 <dashboard style="text-align:center; display:block">
   <h1>Webregator</h1>
-  <input type="text" ng-model="example" style="width: 25vw;" autofocus>
-  <button type="button" name="button">SUBMIT URL</button>
-  <dynamic-text ng-bind="example"></dynamic-text>
+  <webmark-form></webmark-form>
   <webmark-list></webmark-list>
 </dashboard>
