--- a/app/assets/stylesheets/user_dashboard.scss
+++ b/app/assets/stylesheets/user_dashboard.scss
@@ -1,7 +1,12 @@
 // Place all the styles related to the userDashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+html, body {
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    margin: 0px;
+}
 body {
   font-size:1.5em;
 }
@@ -35,15 +40,70 @@ web-mark {
 }
 
 // Scrollbar Styling
-webmark-list::-webkit-scrollbar {
+webmark-list::-webkit-scrollbar, url-content::-webkit-scrollbar {
     width: 1em;
 }
 
-webmark-list::-webkit-scrollbar-track {
+webmark-list::-webkit-scrollbar-track, url-content::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-webmark-list::-webkit-scrollbar-thumb {
+webmark-list::-webkit-scrollbar-thumb, url-content::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
+}
+
+// Webmark dialog
+html, body {
+  position: relative;
+}
+webmark-dialog {
+    background: #eaeaea;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0px;
+    z-index: 999;
+}
+
+dialog-head {
+  background: #333;
+  display: block;
+  height: 16vh;
+}
+
+dialog-head #cancel {
+  float:right;
+  margin: 4vh;
+}
+
+url-content {
+  display: block;
+  width: 60vw;
+  height: 55vh;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 1px solid #111;
+  overflow-y: scroll;
+  margin-top: 2.5vh;
+}
+
+dialog-save {
+  display: block;
+  width: 100vw;
+  background: #777;
+  position: absolute;
+  bottom:0px;
+}
+button#save {
+  width: 25vw;
+  margin: 4vh;
+}
+
+h1#site-url {
+  float:left;
+  color: #fff;
+  margin: 6vh 2vw;
 }
