--- a/app/assets/stylesheets/user_dashboard.scss
+++ b/app/assets/stylesheets/user_dashboard.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the userDashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-html, body {
+html.user_dashboard.index, body.user_dashboard.index {
     overflow: hidden;
     height: 100vh;
     width: 100vw;
