--- a/app/views/webmarks/show.html.erb
+++ b/app/views/webmarks/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @webmark.content %>
+  <%= @webmark.content.html_safe %>
 </p>
 
 <%= link_to 'Edit', edit_webmark_path(@webmark) %> |
