Add view individual webmark functionality

--- a/app/assets/javascripts/angular/views/webmark-list.html.erb
+++ b/app/assets/javascripts/angular/views/webmark-list.html.erb
@@ -1,5 +1,5 @@
 <web-mark ng-repeat="wm in $wmlt.webmarks">
   <site-name ng-bind="wm.url"></site-name>
   <button type="button" name="button">Delete</button>
-  <button type="button" name="button">View</button>
+  <button type="button" name="button" ng-click="$wmlt.webmarkGo(wm.id)">View</button>
 </web-mark>
