Initialize react template components

--- a/app/assets/stylesheets/user_dashboard.scss
+++ b/app/assets/stylesheets/user_dashboard.scss
@@ -57,6 +57,10 @@ webmark-list::-webkit-scrollbar-thumb, url-content::-webkit-scrollbar-thumb {
 html, body {
   position: relative;
 }
+
+.hidden {
+  display: none;
+}
 webmark-dialog {
     background: #eaeaea;
     display: block;
