--- a/app/assets/stylesheets/react.scss
+++ b/app/assets/stylesheets/react.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the React controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body.react{
+  background-color: #00D8FF;
+  color: #222222;
+}
