Initialize components for Webmark form functionality for React

--- a/app/assets/stylesheets/user_dashboard.scss
+++ b/app/assets/stylesheets/user_dashboard.scss
@@ -60,6 +60,11 @@ html, body {
 
 .hidden {
   display: none;
+  z-index: -1;
+}
+.block {
+  display: block;
+  z-index: 1;
 }
 webmark-dialog {
     background: #eaeaea;
