--- a/app/views/react/index.html.erb
+++ b/app/views/react/index.html.erb
@@ -1,3 +1,3 @@
 <%= javascript_pack_tag 'react' %>
-<h1>React Version</h1>
+<h1 style="margin:0px; padding: 2vh;">React Version</h1>
 <div id="root"></div>
