React: Add view functionality for webmark list

--- a/app/assets/stylesheets/user_dashboard.scss
+++ b/app/assets/stylesheets/user_dashboard.scss
@@ -18,6 +18,10 @@ input, button {
   background: #FFF;
 }
 
+button, input[type="submit"] {
+  cursor: pointer;
+}
+
 dynamic-text {
   display: block;
   height: 5vh;
