--- a/app/views/react/index.html.erb
+++ b/app/views/react/index.html.erb
@@ -1,3 +1,4 @@
 <%= javascript_pack_tag 'react' %>
+<%= stylesheet_link_tag    'react/index' %>
 <h1 style="margin:0px; padding: 2vh;">React Version</h1>
 <div id="root"></div>
